--- a/success.html
+++ b/success.html
@@ -46,7 +46,7 @@
 							<div class="side-nav-head">
 								<h4 class="mb-20">Bau-Videos:</h4>
 							</div>
-							<div class="col-lg-12">
+							<div class="col-lg-12 pl-0 pr-20">
 							<div class="item-box mb-20">
 								<figure>
 									<span class="item-hover">
@@ -71,7 +71,7 @@
 							
                            <!-- Video -->
 							<div>
-							<div class="col-lg-12">
+							<div class="col-lg-12 pl-0 pr-20">
 							<div class="item-box mb-20">
 								<figure>
 									<span class="item-hover">
@@ -97,7 +97,7 @@
 							
 							<!-- Video -->
 							<div>
-							<div class="col-lg-12">
+							<div class="col-lg-12 pl-0 pr-20">
 							<div class="item-box mb-20">
 								<figure>
 									<span class="item-hover">
